Inicio front pagina principal diseño y creacion componentes

--- a/Front/ecommerce-app/src/app/app.component.html
+++ b/Front/ecommerce-app/src/app/app.component.html
@@ -1,1 +1,29 @@
-<h1>Hola {{ title }}</h1>
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Ecommerce</title>
+    </head>
+    <body>
+        <header>
+            <img class="logo" src="../assets/logo2.png" alt="logo">
+        </header>
+    <nav>
+        <a href="inicio">Inicio</a>
+        <a href="nuevos">Nuevos</a>
+        <a href="ofertas">Ofertas</a>
+        <a href="mas_vendidos">Más vendidos</a>
+        <a href="atencion_cliente">Atención al cliente</a>
+        <a href="cesta">Tu cesta</a>
+    </nav>
+
+    <section>
+        <h2>Productos Inicio</h2>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Ecommerce. Todos los derechos reservados.</p>
+    </footer>
+    </body>
+</html>
